--- a/templates/signin.html
+++ b/templates/signin.html
@@ -121,7 +121,7 @@
                       >
                         Don’t have an account yet?
                         <a
-                          href="#"
+                          href="/register"
                           class="font-medium text-primary-600 hover:underline dark:text-primary-500"
                           >Sign up</a
                         >
