Add backend registration

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -33,7 +33,7 @@
           id="content-div"
           class="w-3/4 mx-auto flex justify-center items-center"
         >
-          <form method="post" action="#" class="w-1/2 space-y-4 md:space-y-6">
+          <form method="post" action="/register" class="w-1/2 space-y-4 md:space-y-6" id="registration-form">
             <div class="">
               <label
                 for="email"
@@ -106,6 +106,7 @@
               <div class="w-2/5">
                 <label
                   for="lastname"
+                  required="true"
                   class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                   >Last Name</label
                 >
@@ -126,7 +127,9 @@
                 >Current Education Level</label
               >
               <select
-                id="countries"
+                id="educationlevel"
+                name="ed_level"
+                required="true"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
               >
                 <option selected>Choose an option</option>
