--- a/templates/signin.html
+++ b/templates/signin.html
@@ -46,7 +46,7 @@
                     >
                       Sign in to your account
                     </h1>
-                    <form class="space-y-4 md:space-y-6" action="#">
+                    <form class="space-y-4 md:space-y-6" action="/login" method="post">
                       <div>
                         <label
                           for="email"
@@ -82,10 +82,10 @@
                           <div class="flex items-center h-5">
                             <input
                               id="remember"
+                              name="remember"
                               aria-describedby="remember"
                               type="checkbox"
                               class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
-                              required=""
                             />
                           </div>
                           <div class="ml-3 text-sm">
