--- a/templates/questions.html
+++ b/templates/questions.html
@@ -4,112 +4,55 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href={{ url_for('static', filename='style_tw.css')}}/>
+    <link rel="stylesheet" href={{ url_for('static', filename='style_tw.css')
+    }}>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <title>Questions</title>
   </head>
   <body>
-    <div
-      class="relative isolate px-6 pt-14 lg:px-8 justify-center align-baseline"
-    >
-      <div
-        class="full mx-auto max-w-3xl justify-center px-32 pb-4 pt-4 shadow-lg"
+    <div class="relative isolate h-screen bg-gray-100">
+      <header
+        class="fixed min-w-full bg-gradient-to-r from-sky-500 to-violet-600 m-0 h-16"
       >
-        <header class="flex justify-between"><span id="header-topic">TOPIC NAME</span><span id="header-subtopic">SUBTOPIC</span></header>
-        <hr />
-        <p class="invisible">placeholder</p>
-        <div
-          id="question-pill"
-          class="mt-8 bg-white rounded-full p-6 text-center border-sky-200 border-solid border-4 bg-gradient-to-r from-blue-50 to-violet-100 text-gray-600 font-semibold"
-        >
-          <span class="question-text text-3xl">Solve 2x + 5 = 15</span>
+        <div class="w-6/12 mx-auto text-white py-6">
+          <ul class="flex flex-row justify-center items-center text-lg">
+            <li><a href="#">Why KNOWA</a></li>
+            <li><a href="#">Tutors</a></li>
+            <li><a href="#">Plans</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
         </div>
-        <div id="options-section" class="mt-8 gap-6 flex flex-col">
-          <!-- VIEW SOLUTIONS -->
-
-          <div id="accordion-collapse" data-accordion="collapse">
-            <h2 id="accordion-collapse-heading-1">
-              <button type="button" class="flex items-center justify-between w-full p-5 font-medium text-left text-gray-500 border  border-gray-200 rounded-t-xl focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800" data-accordion-target="#accordion-collapse-body-1" aria-expanded="false" aria-controls="accordion-collapse-body-1">
-                <span>View Solution</span>
-                <svg data-accordion-icon class="w-6 h-6 shrink-0" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-              </button>
-            </h2>
-            <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1">
-              <div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
-                <p class="mb-2 text-gray-500 dark:text-gray-400">Solutions will go here</p>
-              </div>
-            </div>
-          </div>
-          
-          <!-- END -->
+      </header>
+      <main class="absolute pt-16 flex w-full mx-auto h-full z-10">
+        <div id="content-div" class="w-2/3 mx-auto flex flex-col">
           <div
-            id="opt-1"
-            class="question-option cursor-pointer w-full h-24 rounded-xl border-2 text-gray-600 text-left p-8 font-semibold text-xl hover:bg-gray-100 shadow-md"
-            data-value="1"
+            id="question-head"
+            class="flex justify-between w-full mx-auto py-12 text-xl"
           >
-            x = 5
+            <div id="difficulty"><h2>Difficulty: 2/10</h2></div>
+            <div id="topic"><h2>Topic: Trigonometry</h2></div>
+            <div id="question-count"><h2>Question 1/10</h2></div>
           </div>
           <div
-            id="opt-2"
-            class="question-option cursor-pointer w-full h-24 rounded-xl border-2 text-gray-600 text-left p-8 font-semibold text-xl hover:bg-gray-100 shadow-md "
-            data-value="2"
+            class="bg-gradient-to-r from-sky-300 to-violet-300 rounded-lg p-12 mx-12"
+            id="question-box"
           >
-            x = 10
+            {{ question }}
           </div>
           <div
-            id="opt-1"
-            class="question-option cursor-pointer w-full h-24 rounded-xl border-2 text-gray-600 text-left p-8 font-semibold text-xl hover:bg-gray-100 shadow-md"
-            data-value="3"
+            class="question-options grid grid-flow-row md:grid-cols-2 mx-12 py-4 my-32 grid-cols-1 gap-12"
           >
-            x = 5
-          </div>
-          <div
-            id="opt-2"
-            class="question-option cursor-pointer w-full h-24 rounded-xl border-2 text-gray-600 text-left p-8 font-semibold text-xl hover:bg-gray-100 shadow-md"
-            data-value="4"
-          >
-            x = 10
+            {% for ans in answers %}
+            <div class="question-card">{{ans}}</div>
+            {% endfor %}
           </div>
         </div>
-        <footer class="overflow-hidden">
-          
-          
-          <div class="footer-text flex justify-between">
-            <span id="footer-left">Difficulty level:</span
-              ><span id="footer-right">Topic Scheduled:</span>
-            </div>
-            <div
-              class="relative bg-gradient-to-r from-green-400 via-yellow-400 to-red-400 w-full h-6 rounded"
-            >
-            <div class="relative bg-gradient-to-r from-green-400 via-yellow-400 to-red-400 w-full h-6 rounded">
-              <div class="absolute h-full top-0" style="left: 10%;">
-                <div class="h-full w-px bg-white"></div>
-              </div>
-              <div class="absolute h-full top-0" style="left: 20%;">
-                <div class="h-full w-px bg-white"></div>
-              </div>
-              <div class="absolute h-full top-0" style="left: 30%;">
-                <div class="h-full w-px bg-white"></div>
-              </div>
-            </div>
-            <div
-            class="footer-box translate-y-1/3 h-16 overflow-hidden grid grid-cols-10"
-          >
-            <div id="footer-box-1" class="footer-difficulty"></div>
-            <div id="footer-box-2" class="footer-difficulty"></div>
-            <div id="footer-box-3" class="footer-difficulty"></div>
-            <div id="footer-box-4" class="footer-difficulty"></div>
-            <div id="footer-box-5" class="footer-difficulty"></div>
-            <div id="footer-box-6" class="footer-difficulty"></div>
-            <div id="footer-box-7" class="footer-difficulty"></div>
-            <div id="footer-box-8" class="footer-difficulty"></div>
-            <div id="footer-box-9" class="footer-difficulty"></div>
-            <div id="footer-box-10" class="footer-difficulty"></div>
-          </div>
-        </footer>
-      </div>
+      </main>
     </div>
-    <script src="../node_modules/flowbite/dist/flowbite.min.js"></script>"
-    <script type="text/javascript" src={{ url_for('static', filename='src/questions.js') }}></script>
-
   </body>
 </html>
