--- a/templates/topics.html
+++ b/templates/topics.html
@@ -31,7 +31,7 @@
       <main class="absolute pt-16 flex w-full min-h-full z-0 bg-gray-100">
         <div id="content-div" class="w-3/4 mx-auto flex flex-col py-16">
           <div class="flex justify-between">
-            <h1 class="text-5xl">Welcome, NAME</h1>
+            <h1 class="text-5xl">Welcome, {{ firstname }}</h1>
             <button
               type="button"
               class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-md px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
